# nixie

./: .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  Jura.toml  Makefile  README.md  default.nix  flake.nix  nix  nix-static-bins.nix  nix-wrapped.sh.in  nixpkgs-cosmopolitan.nix  nixpkgs-darwin-static.nix  pyproject.toml  shell.nix
.github/workflows/: binaries.yml  sources.yml
builder/: default.nix  pyproject.toml
builder/nixie/: __init__.py  main.py  nix.py  nix_channels.py
builder/nixie/cli/: __init__.py  common.py  fetchers.py  init.py  update.py
builder/nixie/cli/commands/: add_tool.py  for_cmd.py  init.py  update.py
builder/nixie/output/: fromNix.py  nix-wrapped.sh.in  script.py  tarball.py
builder/nixie/template/: apply.py  fetch.py  nixie_env.py
nixie/: __init__.py  nix.py
nixie/cli/: __init__.py  common.py  fetchers.py
nixie/cli/commands/: add_tool.py  for_cmd.py  init.py
nixie/output/: script.py  tarball.py
nixie/template/: apply.py  fetch.py
sources/: 00-brotli-add-automake.patch  Makefile  brotli-gen-sources-list.sh  default.nix  lib.mk  tarmod.py
src/: AMBER_HEADER  builder.ab  builders.ab  cli.ab  common.ab  main.ab  nix.ab  platform.ab  resources.ab  term.ab
src/builders/: autoconf.ab  boost.ab  common.ab  lowdown.ab  nix.ab  nlohmann_json.ab  openssl.ab
static-bins/: 0000-darwin-disable-prelink.patch  0000-darwin-use-gcc.patch  0001-darwin-add-cmake.patch  0002-darwin-disable-embedded-shell.patch  default.nix  nixpkgs-darwin-static.nix
tests/: default.nix  generation.nix  makeDarwinTest.nix  migration.nix  rootless.nix
tests/darwin/: generation.nix
tests/linux/: building.nix  generation.nix  migration.nix  rootless.nix
