[project]
name = "nixie"
description = "Portable Nix script builder"
authors = [ { "name" = "Karim Vergnes", "email" = "me@thesola.io" } ]
license = { "file" = "../LICENSE" }
readme = "../README.md"
urls = { "Source" = "https://github.com/nixie-dev/nixie" }
dependencies = [
    "click",
    "rich",
    "click-option-group",
    "python-dotenv",
    "pzp>=0.0.22",
    "gitpython"
    ]
dynamic = [ "version" ]

[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project.scripts]
nixie = "nixie.cli:main"

[tool.setuptools.package-data]
"nixie.output" = ["*.in"]

[tool.bumpver]
current_version = "2023.09-a2"
version_pattern = "YYYY.0M-PYTAGNUM"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"nixie/__init__.py" = [
    "__version__ = '{version}'"
]
"default.nix" = [
    'nixie_ver = "{version}";'
]

